--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
     <div class="bg2 d-flex ">
-        <div class="container d-flex justify-content-center flex-column  px-5 py-5" >
+        <div class="container d-flex justify-content-center flex-column  px-5 py-5">
             <h1 class="d-flex ho justify-content-center py-5">Our Specialties</h1>
             <div
                 class="row d-flex justify-content-center  row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-4 py-5">
@@ -170,6 +170,168 @@
         </div>
 
     </div>
+
+    <div class="bg3">
+        <div class="bg h-75 py-5 ">
+            <div class="container d-flex justify-content-center  col-xxl-8 px-4 g-5  w-100 py-5">
+                <div class="row d-flex  g-5 w-75  border border-light   ">
+                    <i class="fa-solid  text-light fw p fa-cake-candles"></i>
+                    <h1 class="text-center text-light  fs-1 ">Magic Processing </h1>
+                    <p class="text-center text-light ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe
+                        minus nisi, <br> nostrum commodi
+                        dignissimos officiis et quaerat corrupti facilis quasi.</p>
+
+
+                    <form class=" width d-flex justify-content-center   py-5 ">
+
+
+                        <div class=" d-flex justify-content-center py-0 ">
+                            <button type="button"
+                                class="btn btn-outline-light text-light btnc3  px-5  py-3 text-center ">Discover More
+                            </button>
+                        </div>
+
+                    </form>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class=" d-flex ">
+        <div class="container d-flex justify-content-center flex-column  px-5 py-5">
+            <div class="d-flex justify-content-center"> <i class="fa-solid fo    p fa-cake-candles"></i></div>
+
+
+
+
+            <h1 class="d-flex ho justify-content-center py-5">Our Creation</h1>
+            <div
+                class="row d-flex justify-content-center  row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-4 g-4 py-5">
+
+                <div class="col d-flex  flex-column align-items-center">
+                    <img class="w-100 d-flex border" src="image/image1.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">cupcakes</h5>
+                    </div>
+                </div>
+
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100 border" src="image/image2.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Macarons</h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100   border" src="image/image3.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Small Cakes</h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100   border" src="image/image4.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Croissants
+
+                        </h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100   border" src="image/image5.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Apple Pie</h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100  border" src="image/image6.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Cheesecake</h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100 border" src="image/image7.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Cheesecake</h5>
+                    </div>
+                </div>
+                <div class="col d-flex flex-column align-items-center">
+                    <img class="w-100  border" src="image/image8.jpg" alt="">
+                    <div class="">
+                        <h5 class="px-5 py-3">Cheesecake</h5>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+
+    <div>
+        <div class="bg5">
+            <div class="d-flex justify-content-center py-5"> <i class="fa-solid fo    p fa-cake-candles"></i></div>
+            <h1 class="d-flex ho justify-content-center py-5">Our Creation</h1>
+            <p class="d-flex flex-column text-center"><span class="fw-bold fs-4">Ingredients:</span>6 large Bramley
+                apples, finely sliced
+                <br>
+                200g unsalted butter <br>
+                140g raisins <br>
+                100g soft brown sugar <br>
+                4 eggs <br>
+                200g self-raising flour
+            </p> <br>
+            <div class="d-flex justify-content-center "><img class="  br" src="image/cup.jpg" width="100" alt=""></div>
+            <p class="text-center fs-4 my-0 fw-bold">Eve's Pudding</p>
+        </div>
+    </div>
+
+
+    <div class="bg6 py-0">
+
+
+
+
+        <div class="container px-4 py-5  " id="icon-grid">
+            <h2 class=" text-center">Icon grid</h2>
+            <div class="row  row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-2 g-4 py-5">
+                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                    <div>
+                        <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
+                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p>Customer</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                    <div>
+                        <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
+                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p>Customer</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                    <div>
+                        <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
+                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p>Customer</p>
+                    </div>
+                </div>
+                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                    <div>
+                        <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
+                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p>Customer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
