--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
         <nav
             class="navbar navbar-expand-lg navcolor  justify-content-center  px-md-5 px-sm-0  justify-content-md-center  bg-white">
-            <div class="container-fluid ">
+            <div class="container-fluid d-flex justify-content-lg-center  ">
                 <a class="navbar-brand" href="#"><img class=" px-md-5 px-sm-0  img-fluid"
                         src="image/sweet-bakery-180x180.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,19 +29,19 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse  gap-5 " id="navbarSupportedContent">
-                    <ul class="navbar-nav text-center px-5 text-md-start justify-content-start gap-3">
-                        <li class="nav-item ">
+                <div class="collapse navbar-collapse   gap-5 " id="navbarSupportedContent">
+                    <ul class="navbar-nav text-center  px-5 text-md-start  gap-3">
+                        <li class="nav-item text-center ">
                             <a class="nav-link active px-3  text-secondary-emphasis " aria-current="page" href="#">
                                 <span class="blue">Home</span></a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link text-secondary-emphasis px-3 active" href="#">About us</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link px-3 text-secondary-emphasis active" href="#">Services</a>
                         </li>
-                        <li class="nav-item ">
+                        <li class="nav-item  text-center">
                             <a class="nav-link  active px-3 active " aria-disabled="true">Blog</a>
                         </li>
 
@@ -55,7 +55,7 @@
 
 
                     <div class="px-5 d-flex justify-content-center py-3">
-                        <a class="px-3 text-black" href="#"> <i class="fa-brands fa-google-plus-g"></i></a>
+                        <a class="px-3 text-black li" href="#"> <i class="fa-brands fa-google-plus-g"></i></a>
                         <a class="px-3 text-black" href="#"><i class="fa-brands fa-twitter"></i></a>
                         <a class="px-3 text-black" href="#"><i class="fa-brands fa-square-facebook"></i></a>
                     </div>
@@ -296,36 +296,265 @@
 
 
         <div class="container px-4 py-5  " id="icon-grid">
-            <h2 class=" text-center">Icon grid</h2>
-            <div class="row  row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-2 g-4 py-5">
-                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+            <h2 class=" text-center fs-1 fw-bold">Clients Say</h2>
+            <div
+                class="row d-flex justify-content-center  row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
+                <div class="col d-flex align-items-center mx-5 text-light "> <img src="image/client1.jpg"
+                        class="px-3 br2" width="100" alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
                         <p class=" mb-0 fs-5 ">Anna White</p>
                         <p>Customer</p>
                     </div>
                 </div>
-                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                <div class="col d-flex align-items-center  "> <img src="image/client2.jpg" class="px-3 br2" width="100"
+                        alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
                         <p class=" mb-0 fs-5 ">Anna White</p>
                         <p>Customer</p>
                     </div>
                 </div>
-                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                <div class="col d-flex align-items-center mx-5 "> <img src="image/client3.jpg" class="px-3 br2"
+                        width="100" alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
                         <p class=" mb-0 fs-5 ">Anna White</p>
                         <p>Customer</p>
                     </div>
                 </div>
-                <div class="col d-flex align-items-center  "> <img src="image/client1.jpg" class="px-3 br2" width="100" alt="">
+                <div class="col d-flex align-items-center  "> <img src="image/client4.jpg" class="px-3 br2" width="100"
+                        alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
                         <p class=" mb-0 fs-5 ">Anna White</p>
                         <p>Customer</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="row d-flex justify-content-center w-100 px-4 ">
+        <div class="col-md-5 col-lg-4 order-last   hp px-5  order-md-last order-sm-last">
+            <ul class=" mb-3 py-5 bgh  ">
+                <li class=" d-flex justify-content-center  ">
+                    <div class=" ">
+                        <h6 class="my-0 py-3 fs-4 ">Have a Questions?</h6> <small class="tb ">Please call
+                            us and
+                            we
+                            will <br> answer you.</small>
+                        <div class=" py-3 tb"> <small class="">Phone: <br>
+                                +7 (123) 456-78-90</small></div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-7 d-flex flex-column justify-content-center    col-lg-4">
+            <h2 class=" ho py-5 fs-1 fw-bold">Our Special Cakes</h2>
+            <form class="needs-validation  " novalidate="">
+                <div class="row g-3 ">
+                    <div class="col-sm-4"> <label for="firstName" class="form-label fs-5 cg  ">Goods</label>
+                        <hr>
+                        <div class="">Almond Cookie </div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4"> <label for="lastName" class="form-label cg fs-5 ">Price</label>
+                        <hr>
+                        <div>$36.18</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4"> <label for="lastName" class="form-label fs-5 cg">Amount (g)</label>
+                        <hr>
+                        <div>100</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Apple Pie</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$20</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">2100</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Baklava </div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$37.35</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">150</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Banana Split</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$3</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">130</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Biscuit</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$4</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">230</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Blueberry Muffin</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$6.75</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">90</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Brownie</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$30</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">2300</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Butterscotch</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$10</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">100</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Chocolate Cake</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$33</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">1900</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Chocolate Spread</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$17</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">100</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Cinnamon Roll</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$20</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">80</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Cream Pie</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$31</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">1500</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">Doughnut</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">$1.5</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">90</div>
+                        <hr>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="">and etc.</div>
+
+                    </div>
+
+
+
+                </div>
+        </div>
+    </div>
+
+
+    <div class="bg8 w-100 h-100">
+        <div class="container col-xxl-8 px-4 g-5   py-5">
+            <div class="row d-flex justify-content-center align-items-center   g-5  ">
+                <h1 class="text-center text-light fs-1 fw-bold py-5">Get Our Sweet News </h1>
+
+
+                <form class="  width d-flex flex-row    py-5 ">
+
+                    <div class="form-floating gap-4 w-50 d-flex w-25 "> <input type="email" class="form-control inpt fl    "
+                            id="floatingInput" placeholder="name@example.com" fdprocessedid="6rzofm"> <label
+                            class="px-5 fs-5 fw-bold inptt  text-secondary " for="floatingInput ">your email
+                            adrees</label>
+                        <button type="button"
+                            class="btn btnc btnc4 px-5 text-light w-50 fs-4 fw-bold bl text-center ">subscribe</button>
+
+                    </div>
+                    </label>
+
+
+
+                </form>
+                <h5 class="d-flex justify-content-center  text-light">FOLLOW US</h5>
+                <div class="d-flex justify-content-center   text-light">
+                    <div class=" d-flex"><i class="fa-brands il fa-youtube"></i> <i
+                            class="fa-brands il fa-pinterest-p"></i> <i class="fa-brands il fa-instagram"></i></div>
+                </div>
+
             </div>
         </div>
     </div>
