--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
-                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p class=" mb-0 fs-5 ">Liza Green</p>
                         <p>Customer</p>
                     </div>
                 </div>
@@ -319,7 +319,7 @@
                         width="100" alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
-                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p class=" mb-0 fs-5 ">Kate Gray    </p>
                         <p>Customer</p>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                         alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
-                        <p class=" mb-0 fs-5 ">Anna White</p>
+                        <p class=" mb-0 fs-5 ">David Black</p>
                         <p>Customer</p>
                     </div>
                 </div>
@@ -527,40 +527,65 @@
         </div>
     </div>
 
-
-    <div class="bg8 w-100 h-100">
-        <div class="container col-xxl-8 px-4 g-5   py-5">
-            <div class="row d-flex justify-content-center align-items-center   g-5  ">
-                <h1 class="text-center text-light fs-1 fw-bold py-5">Get Our Sweet News </h1>
+    <div  style="opacity: 0.8; background-color: rgb(75, 67, 66);">
 
 
-                <form class="  width d-flex flex-row    py-5 ">
+        <div class="bg8 w-100 h-100">
+            <div class="container col-xxl-8 px-4 g-5   py-5">
+                <div class="row d-flex justify-content-center align-items-center   g-5  ">
+                    <h1 class="text-center text-light fs-1 fw-bold py-5">Get Our Sweet News </h1>
 
-                    <div class="form-floating gap-4 w-50 d-flex w-25 "> <input type="email" class="form-control inpt fl    "
-                            id="floatingInput" placeholder="name@example.com" fdprocessedid="6rzofm"> <label
-                            class="px-5 fs-5 fw-bold inptt  text-secondary " for="floatingInput ">your email
-                            adrees</label>
-                        <button type="button"
-                            class="btn btnc btnc4 px-5 text-light w-50 fs-4 fw-bold bl text-center ">subscribe</button>
 
+                    <form class="  width d-flex flex-row    py-5 ">
+
+                        <div class="form-floating gap-4 w-50 d-flex w-25 "> <input type="email"
+                                class="form-control inpt fl    " id="floatingInput" placeholder="name@example.com"
+                                fdprocessedid="6rzofm"> <label class="px-5 fs-5 fw-bold inptt  text-secondary "
+                                for="floatingInput ">your email
+                                adrees</label>
+                            <button type="button"
+                                class="btn btnc btnc4 px-5 text-light w-50 fs-4 fw-bold bl text-center ">subscribe</button>
+
+                        </div>
+                        </label>
+
+
+
+                    </form>
+                    <h5 class="d-flex justify-content-center  text-light">FOLLOW US</h5>
+                    <div class="d-flex justify-content-center   text-light">
+                        <div class=" d-flex"><i class="fa-brands il fa-youtube"></i> <i
+                                class="fa-brands il fa-pinterest-p"></i> <i class="fa-brands il fa-instagram"></i></div>
                     </div>
-                    </label>
 
-
-
-                </form>
-                <h5 class="d-flex justify-content-center  text-light">FOLLOW US</h5>
-                <div class="d-flex justify-content-center   text-light">
-                    <div class=" d-flex"><i class="fa-brands il fa-youtube"></i> <i
-                            class="fa-brands il fa-pinterest-p"></i> <i class="fa-brands il fa-instagram"></i></div>
                 </div>
+            </div>
+        </div>
 
+
+        <div class="bg-black ">
+            <div class="container bg-black  ">
+                <footer class="d-flex flex-wrap justify-content-center  align-items-center py-5  ">
+                    <ul class="nav col-md-4 justify-content-start  ">
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light">About us</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Vacancies</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Contacts</a></li>
+                    </ul>
+                    <div>
+                        <a href="/"
+                            class="col-md-12 d-flex align-items-center  justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+                            aria-label="Bootstrap"><img src="image/sweet-bakery-180x180.png" class="" width="70" alt="">
+                        </a>
+                        <p class="text-center text-light">© Copyright 2020 Mobirise - All Rights <br> Reserved</p>
+                    </div>
+                    <p class="col-md-4 mb-0 d-flex justify-content-end text-body-secondary"> <button type="button"
+                            class="btn  btnc4 px-5 text-light w-50  bl text-center ">Make an Order</button>
+
+                    </p>
+                </footer>
             </div>
         </div>
     </div>
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
