--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
 
     <div>
         <nav
-            class="navbar navbar-expand-lg navcolor  justify-content-center  px-md-5 px-sm-0  justify-content-md-center  bg-white">
+            class="navbar navbar-expand-lg navcolor  justify-content-center  px-md-5  px-sm-0   justify-content-md-center  bg-white">
             <div class="container-fluid d-flex justify-content-lg-center  ">
-                <a class="navbar-brand" href="#"><img class=" px-md-5 px-sm-0  img-fluid"
+                <a class="navbar-brand" href="#"><img class=" px-md-5 px-sm-0 px-lg-0 imgw   img-fluid"
                         src="image/sweet-bakery-180x180.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse   gap-5 " id="navbarSupportedContent">
+                <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center   gap-5 "
+                    id="navbarSupportedContent">
                     <ul class="navbar-nav text-center  px-5 text-md-start  gap-3">
                         <li class="nav-item text-center ">
                             <a class="nav-link active px-3  text-secondary-emphasis " aria-current="page" href="#">
@@ -71,54 +72,58 @@
 
 
 
+    <div class="bgcb"  >
 
-
-    <div id="carouselExampleAutoplaying" class="carousel  slide " data-bs-ride="carousel">
-        <div class="carousel-inner  ">
-            <div class="carousel-item active ">
-                <div class="background">
-                    <img src="image/bakery-1920x1280.jpg" class="d-block   w-100" alt="...">
-                </div>
-                <div class="carousel-caption position-absolute bottom-50  py-0 d-md-block">
-                    <h1 class="fh  d-flex">Enjoy Our Food Expirience</h1>
-                    <h3 class="fp">We offer a large assortment from cakes to small pastries</h3>
-                    <div class=" d-flex justify-content-center position-absolute top-100 py-md-5 py-0  ">
-                        <button type="button" class="btn btnc px-2 px-md-5 text-light py-0 py-md-3 btnc2 text-center ">
-                            order sweets!</button>
+        <div id="carouselExampleAutoplaying" class="carousel  slide bgcb  " data-bs-ride="carousel">
+            <div class="carousel-inner bgcb ">
+                <div class="carousel-item active  ">
+                    <div class="background">
+                        <img src="image/bakery-1920x1280.jpg" class="d-block   w-100" alt="...">
                     </div>
+                    <div class="carousel-caption position-absolute bottom-50  py-0 d-md-block">
+                        <h1 class="fh  d-flex">Enjoy Our Food Expirience</h1>
+                        <h3 class="fp">We offer a large assortment from cakes to small pastries</h3>
+                        <div class=" d-flex justify-content-center position-absolute top-100 py-md-5 py-0  ">
+                            <button type="button"
+                                class="btn btnc px-2 px-md-5 text-light py-0 py-md-3 btnc2 text-center ">
+                                order sweets!</button>
+                        </div>
 
 
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="image/img2.jpg" class="d-block w-100" alt="...">
-
-                <div class="carousel-caption position-absolute bottom-50 py-0  d-md-block">
-                    <h1 class="fh  d-flex">Yummy Delicious Сakes</h1>
-                    <h3 class="fp">We accept orders for birthdays, weddings and celebrations</h3>
-                    <div class=" d-flex justify-content-center position-absolute top-100 py-md-5 py-0 ">
-                        <button type="button" class="btn btnc px-2 px-md-5 text-light py-0 py-md-3 btnc2 text-center ">
-                            order sweets!</button>
                     </div>
-
-
                 </div>
+                <div class="carousel-item">
+                    <img src="image/img2.jpg" class="d-block w-100" alt="...">
+
+                    <div class="carousel-caption position-absolute bottom-50 py-0  d-md-block">
+                        <h1 class="fh  d-flex">Yummy Delicious Сakes</h1>
+                        <h3 class="fp">We accept orders for birthdays, weddings and celebrations</h3>
+                        <div class=" d-flex justify-content-center position-absolute top-100 py-md-5 py-0 ">
+                            <button type="button"
+                                class="btn btnc px-2 px-md-5 text-light py-0 py-md-3 btnc2 text-center ">
+                                order sweets!</button>
+                        </div>
+
+
+                    </div>
+                </div>
+
+
             </div>
 
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
+
 
 
     <div class="bg2 d-flex ">
@@ -319,7 +324,7 @@
                         width="100" alt="">
                     <div>
                         <p>Quas magni ab officia vero aperiam <br> voluptate eaque deleniti, quae <br> aliquam, est!</p>
-                        <p class=" mb-0 fs-5 ">Kate Gray    </p>
+                        <p class=" mb-0 fs-5 ">Kate Gray </p>
                         <p>Customer</p>
                     </div>
                 </div>
@@ -527,7 +532,7 @@
         </div>
     </div>
 
-    <div  style="opacity: 0.8; background-color: rgb(75, 67, 66);">
+    <div style="opacity: 0.8; background-color: rgb(75, 67, 66);">
 
 
         <div class="bg8 w-100 h-100">
